fix: 정산 배치 쿼리 개선 (환불 건 차감 미반영 이슈 해결)
- 정산 집계 시 PAID(+) 및 CANCELLED(-) 상태 분기 처리 추가
- 취소일(cancelledAt)이 정산 기간에 포함되는 경우도 집계 대상에 포함
- 이미 정산된 건의 사후 환불 시 정산금 자동 차감 구현